--- a/css/responsive.css
+++ b/css/responsive.css
@@ -20,7 +20,7 @@
         float: left;
     }
     msd-nav-wrapper {
-       padding: 0;
+       padding: 0 40px;
     }
 }
 
@@ -36,7 +36,7 @@
         float: left;
     }
     msd-nav-wrapper {
-       padding: 0;
+       padding: 0 40px;
     }
 /*    about - rem diagonal border*/
     #about-bg-diagonal {
@@ -48,7 +48,6 @@
     #about-content-box {
         padding-top: 30px;
         width: 100%;
-        height: 450px;
     }
 
 /*    STATS */
@@ -65,6 +64,7 @@
 
 @media (max-width: 767px) {
     /*    mobile menu*/
+
      .navbar {
         background: rgba(0, 0, 0, .7);
         padding: 0;
@@ -73,7 +73,7 @@
         float: left;
     }
     msd-nav-wrapper {
-       padding: 0;
+       padding: 0 35px;
     }
 /*    home heading*/
     #home-heading h3 {
@@ -94,7 +94,7 @@
     #about-content-box {
         padding-top: 30px;
         width: 100%;
-        height: 450px;
+        text-align: center;
     }
 /*    work */
     .img-wrapper img {
@@ -132,5 +132,41 @@
 /*xSM-3 devices*/
 
 @media (max-width: 320px) {
+    .msd-nav-wrapper {
+    padding: 0 20px;
+}
 
+/*    Service*/
+    .service-item-icon i {
+        width: 58px;
+        height: 58px;
+        padding: 7px;
+    }
+    .service-item title h3 {
+        font-size: 17px;
+    }
+/*    About*/
+    #about-content-box {
+        margin-top: 40px;
+    }
+/*Testimonials*/
+
+    .testimonial img {
+        max-width: 80px;
+    }
+    .testimonial blockqoute {
+        padding: 6px 30px;
+    }
+    .testimonial blockqoute:before {
+        left: 7px;
+
+    }
+    .testimonial blockqoute:after {
+        right: 7px;
+
+
+    }
+    .testimonial blockqoute p {
+        font-size: 12px;
+    }
 }
