--- a/css/style.css
+++ b/css/style.css
@@ -356,7 +356,7 @@ h4.team-member-designation {
 }
 
 #customers-testimonials {
-    padding: 50px, 0;
+    padding: 50px 0;
 }
 
 .testimonial img {
