--- a/css/style.css
+++ b/css/style.css
@@ -547,10 +547,13 @@ footer {
 address {
     color: #fff;
 }
-
+address strong {
+    font-size: 16px;
+}
 address strong,
 #phone-fax-email strong {
     letter-spacing: 1px;
+
 }
 
 form .form-control {
